--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
             android:name=".LinkActivity"
             android:label="@string/title_activity_link"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".LessonListActivity"></activity>
+        <activity android:name=".LessonActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
