--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
             android:name=".SignUpActivity"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".ProfileActivity"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".LessonListActivity"></activity>
         <activity android:name=".LessonActivity" />
         <activity
