--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
             android:label=""
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
+            android:name=".PeoplesActivity"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".ProfileActivity"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar"></activity>
