--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    implementation 'com.jaedongchicken:ytplayer:1.4.4'
+    implementation 'com.github.jeancsanchez:JcPlayer:2.6.16'
 }
